Finish Section 2 and fix overflowing section 1 containers

--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-
-.card {
-    border-style: solid;
-    border-radius: 5px;
-    border-color: blue;
-    height: 100px;
-    width: 100px;
-}
-
 body {
     height: 100vh;
     width: 100vw;
@@ -23,15 +14,28 @@ body {
     background-size: cover;
     font-family: 'Hero', Tahoma, Geneva, Verdana, sans-serif;
     height: 100vh;
+    min-height: 25%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    flex: 1 0 25%;
 }
 
 .nav {
     display: flex;
     justify-content: space-between;
     background-color: rgba(200, 193, 193, 0.626);
+}
+
+.fa-spaghetti-monster-flying {
+    color: #DF2E38;
+}
+
+.company{
+    font-size: 24px;
+    color: #5D9C59;
+    font-weight: bold;
+    margin-left: 20px;
 }
 
 ul{
@@ -50,32 +54,30 @@ a {
     margin-right: 20px;
 }
 
-.company{
-    font-size: 24px;
-    color: #5D9C59;
-    font-weight: bold;
-    margin-left: 20px;
-}
-
 .intro-section{
     display: flex;
     justify-content: center;
     align-items: start;
-    flex: 1;
     padding: 100px;
     text-align: center;
+    
 }
 
 .intro{
     display:flex;
     flex-direction: column;
-    height: 30%;
     padding: 30px 0 30px 0;
-    flex: 0 0 30%;
+    flex: 1 1 30%;
     justify-content: space-between;
     background-color: rgba(200, 193, 193, 0.737);
     border-radius: 10px;
+    font-family: 'Tilt Neon', cursive;
+}
 
+.sub {
+    flex: 1 1 auto;
+    max-width: 50%;
+    align-self: center;
 }
 
 .signup{ 
@@ -85,20 +87,71 @@ a {
     max-width: 200px;
     color: white;
     align-self: center;
+    font-family: 'Tilt Neon', cursive;
 }
-.sub {
-    flex: 1 1 auto;
-    max-width: 50%;
+
+@media(max-height: 500px){
+    .intro-section{
+        padding: 2% 0 0 0;
+        font-size: 12px;
+        max-height: 2%;
+    }
+    .intro{
+        max-width: 30%;
+    }
+}
+
+/* Section Two */
+.white {
+    color: white;
+    background-color: #4C4B16;
+    background-size: cover;
+    font-family: 'Hero', Tahoma, Geneva, Verdana, sans-serif;
+    display: flex;
+    flex-direction: column;
+    padding: 50px 0;
+    min-height: 35%;
+    justify-content: space-around;
+}
+h2 {
+    text-align: center;
+    margin-top: -50px;
+    font-size: 48px;
+    font-family: 'Sacramento', cursive;
+}
+
+.cards {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 25px;
+    font-family: 'Tilt Neon', cursive;
+}
+
+.card {
+    border-radius: 8px;
+    height: 300px;
+    width: 300px;
+}
+
+.captions {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+}
+
+.caption {
+    max-width: 150px;
+    text-align: center;
     align-self: center;
+    font-size: 18px;
+    font-weight: bold;
 }
 
-img {
-    height: 500px;
-    width: auto;
-    background: grey;
-    margin-right: 75px;
-}
-
-.fa-spaghetti-monster-flying {
-    color: #DF2E38;
+.cardarea {
+    display: flex;
+    justify-content: space-evenly;
+    min-width: 100%;
+    flex-wrap: wrap;
+    gap: 25px;
 }
